# US-Messenger

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  local.yml  manage.py  production.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
apps/accounts/: admin.py  middleware.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
apps/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_alter_chatroom_description_alter_chatroom_name.py
apps/common/: exceptions.py  mixins.py  models.py  urls.py  utils.py
apps/notifications/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  local.py  prod.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt  production.txt
us/: conftest.py
us/templates/: base.html
us/users/: adapters.py  admin.py  apps.py  models.py  urls.py
us/users/api/: serializers.py
us/users/migrations/: 0001_initial.py
us/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  (+3 more)
(+1 files in other folders)
