[project]
name = "us"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    # Channels and WebSocket support
    "channels>=4.1.0",
    "channels-redis>=4.2.0",
    # Celery for background tasks
    "celery>=5.4.0",
    # File storage
    "boto3>=1.35.0",
    "django-storages>=1.14.4",
    # Validation
    "pydantic>=2.9.0",
    # Testing
    "pytest>=8.3.0",
    "pytest-django>=4.9.0",
    "pytest-asyncio>=0.24.0",
    # Additional utilities
    "redis>=5.1.0",
    "requests>=2.32.0",
]

[tool.uv.workspace]
members = [
    "usclient",
]
